# actix-prom-bug

./: Cargo.toml  README.md  shell.nix
examples/: manual.rs  middleware.rs
