[package]
name = "actix-prom"
version = "0.1.0"
authors = ["Matteo Joliveau <matteojoliveau@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.0"
actix-web-opentelemetry = { version = "0.8.0", features = ["metrics"] }
opentelemetry = "0.10.0"
opentelemetry-prometheus = "0.3.0"
http = "0.2.2"
prometheus = "0.10.0"